welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: type mismatch;
 found   : Unit
 required: String
		case 0|6 => 
                         ^